[project]
name = "logit-lens-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.7.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformer-lens>=2.17.0",
]
